Updating bridge v2 docs (#239)
* update api reference and insights list

* revert insights list changes

* Add v1 Insights documentation

* added tags feature for AA framework (#238)

* added tags feature for AA framework

* removed list for single element in error messages column under data fetch API

* Update consent object

---------

Co-authored-by: riyasuntwal <riyasuntwal@Setus-MacBook-Pro.local>
Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

* Added v2 docs

* Added assets to bridge v2 docs

* Updated assets in overview & configure page

* Remove unused APIs

* Added customer-account-closed error code for biller (#242)

* Added customer-account-closed error code

* fixed Alignment issue

---------

Co-authored-by: shanmuga3 <shanmuga@setu.co>

* FIP Health API changes (#243)

* Update request body for create fi data block

* Docs/adding tags to api reference and updating info (#247)

* Added-API-reference-support-for-tags-in-consent

* updated-tags-related-info

---------

Co-authored-by: riyasuntwal <riyasuntwal@Setus-MacBook-Pro.local>

* Data 1822 (#250)

* initial commit for docs

* add esign template api reference

* add description for the pdf templating api reference

* Update menu items

---------

Co-authored-by: rahul roy <rahul@setu.co>
Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

* Remove OKYC documentation

* docs(DATA-1850): add estamp count API to docs (#246)

Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

* fix heading, fix the response of the get api (#252)

* fix heading, fix the response of the get api

* Update heading

---------

Co-authored-by: rahul roy <rahul@setu.co>
Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

* added-enableAdditionalPhoneNumber-config-in-consent-journey (#253)

Co-authored-by: riyasuntwal <riyasuntwal@Setus-MacBook-Pro.local>

* added details of name match data in api response and eSign notification response as an optional fe

--- a/content/dev-tools/bridge/overview.mdx
+++ b/content/dev-tools/bridge/overview.mdx
@@ -1,63 +1,73 @@
 ---
 sidebar_title: Overview
 page_title: Bridge overview
-order: 0
+order: 1
 visible_in_sidebar: true
 ---
 
-## The Bridge
+## Overview
 
-The Bridge is a single web portal that lets you pick, configure and go live with your Setu integrations, generate and download transaction and settlement reports, invite users from your organisation to use our platform—with more features on the way.
+Bridge is a free self-serve platform provided by Setu, where you can explore and use multiple products provided by Setu—fill in details to go live with products, manage user access to those products, and also check reports and analytics related to your configured products, on a single platform.
 
-<p>
-  <a href="https://bridge.setu.co/signup" target="_blank">
-    Sign up on The Bridge
-  </a>{" "}
-  to get started if you haven’t already.
-</p>
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Home.png" alt="Bridge home" />
 
-<MainImage
-  src="https://storage.googleapis.com/strapi-assets/latest/Screenshot_2021_03_19_at_3_39_31_PM_ccd1f16be5/Screenshot_2021_03_19_at_3_39_31_PM_ccd1f16be5.png"
-  alt="Bridge"
-/>
+**Explore the platform and get started with <a href="https://bridge.setu.co/v2">Setu Bridge</a> **
 
-This is intended to be an entirely a self-serve console, with all your information related to your Setu integration available in just a few clicks. Of course, some workflows are still dependent on offline methods, but we are working hard to provide a seamless, fully-online experience for all of our financial integrations.
+<hr class="primary" />
 
-<hr className="primary" />
+### Sign up on the Bridge
+You can sign up on the Bridge in a few simple steps: 
+1. <ins>Provide your e-mail ID.</ins> Ensure that you use an official e-mail where you want access to different API products.
+2. <ins>Enter or create your password for Bridge.</ins> Make sure you fulfil all the criteria mentioned on the platform; otherwise, you cannot proceed.
+3. <ins>Go to your inbox and confirm your e-mail ID.</ins> We send you an e-mail to verify your ID. 
+4. <ins>Log in to the Bridge account you created.</ins> Use the same e-mail ID and password again to log in to your account, and complete the sign up process.
+5. <ins>Provide your business name.</ins> This should belong to the business you’re setting up the Bridge account for. **Quick note:** You can use a different business name later when you configure the product (say, if you have a subsidiary or a different legal name).
+6. <ins>Optionally, set up 2FA (two-factor authentication) for account login.</ins> Enable or disable 2FA, which asks for a password and an OTP sent to your registered e-mail ID whenever you login.
 
-### Basic terminology
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Sign%20up.gif" alt="Sign up on the bridge" />
 
-Here are some terms you might see repeated through out these guides—
+### Log in to Bridge
 
-##### Partner
+You can log in to the Bridge in a few simple steps:
+1. Enter your registered e-mail ID.
+2. Enter your password.
+3. Enter OTP. **Note**, you need to provide an OTP only if you have enabled 2FA.
 
-Any business entity that integrates with Setu to use our platform is called a “partner”. Once sign-up on the Bridge is complete, the entity is given a `partnerID`, that uniquely identifies them on our system, and can now begin using our offerings.
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Login.gif" alt="Login into the bridge" />
 
-##### Product
+### Navigating Bridge
 
-Setu offers multiple financial API integrations, each of them solving for a particular use case. The Collect BBPS product lets you get listed as a biller on the Bharat Bill Payment System, while the FD product lets you embed a full-fledged fixed deposit flow into your app. Each of these discrete, individual offerings is called a “product”.
+<img src="http://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/navigating-bridge.gif" alt="Sidebar navigation" /> 
 
-##### Product configuration / Configured product
+##### Side navigation items
+Explore the different sections on the Bridge sidebar.
 
-These aforementioned products, each need a set of input parameters before you can start using them for your needs. The products come as an empty template, where you can enter the required details before you can test them and go live.
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Side%20nav.gif" alt="Bridge side navigation items" />
 
-For example, the Collect BBPS product requires the partner to enter details about where to fetch bills from, how to identify customers on their system, and where to settle the incoming payments. These together, make up the “configuration” required for the Collect BBPS to begin making transactions.
+- The **Home page** is a central view for all products. This is where you can see details of your child accounts, pending integrations, and data on live integrations.
 
-Once the configuration has been set, the partner now has a “configured product”, which they can now begin testing. Partners can create as many product configurations as they need, there are no limits.
+- The **Product store** contains a list of all Setu product categories.
 
-##### Sandbox / production environments
+- **Settings** provide controls for your organisation, including:
+    - A list of users, whom you or other administrators can invite or disable, for either the parent Bridge account or specific child accounts.
+    - Setting option to set up 2FA for all users invited to your Bridge account.
+    - Common API credentials that you can use for integrations across all child accounts.
+- The **“PRODUCTS YOU ARE USNG”** section shows the list of product categories you are using. Clicking any of them takes you to the context of that category, where you can:
+    - View product-specific reports and analytics.
+    - Navigate to product instances.
+    - See child accounts for the product category, if you manage more than one.
 
-Once a partner is on-boarded, they are given access to a virtual isolated space inside which they can configure and test as many products and configurations as they wish. This is called the “sandbox” environment. Transactions made in sandbox are all mocked, meaning there is no actual movement of money between the involved parties.
 
-Once the partner is satisfied with testing in sandbox, they can now submit their product configuration to Setu for a final round of review, along with the org KYC. Once we verify the configuration and the KYC, the partner is now given access to the “production”, or “prod” environment.
+##### Your Profile
 
-Here, in the production environment, partners can create as many fresh configurations as required, which can be be taken “live”. Transactions made with these configurations would trigger actual movement of money between the parties.
+<img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Profile.gif" alt="User profile on the bridge" />
 
-Data is not shared between sandbox and production—so configurations exist independently on sandbox and production. You can switch between them easily by hovering over the coloured border on the top of each page. Sandbox is coloured orange, and production is coloured green.
-
-<MainImage
-  src="https://storage.googleapis.com/strapi-assets/latest/sandbox_prod_switch_42f516755b/sandbox_prod_switch_42f516755b.gif?1812386"
-  alt="ENV-switch"
+<NextPage
+  info={{
+    description: "View all the products and how to set them up",
+    slug: "/dev-tools/bridge/explore-and-configure-products",
+    title: "Explore and configure products",
+  }}
 />
 
 <WasPageHelpful />
