--- a/content/data/insights/v1/api-reference.mdx
+++ b/content/data/insights/v1/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: API reference
-page_title: Aadhaar eSign API reference
-order: 9
+page_title: Setu Insights API reference
+order: 4
 visible_in_sidebar: true
 ---
