Update sidebar name and redirects

--- a/content/dev-tools/bridge/explore-and-configure-products.mdx
+++ b/content/dev-tools/bridge/explore-and-configure-products.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Explore and configure products
+sidebar_title: Configure products
 page_title: Bridge explore and configure products
 order: 2
 visible_in_sidebar: true
