--- a/content/data/digilocker/pulldrivinglicense.mdx
+++ b/content/data/digilocker/pulldrivinglicense.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Pull Driving Licence via Digilocker
-page_title: Digilocker quickstart
+sidebar_title: Pull Driving Licence
+page_title: Digilocker Quickstart
 order: 1
 visible_in_sidebar: true
 ---
