docs(DATA-1974): added aadhaar-lite documentation

--- a/content/data/digilocker/pulldrivinglicense.mdx
+++ b/content/data/digilocker/pulldrivinglicense.mdx
@@ -1,12 +1,12 @@
 ---
 sidebar_title: Pull Driving Licence
 page_title: Digilocker Quickstart
-order: 1
+order: 2
 visible_in_sidebar: true
 ---
 
 
-## Pull Driving Licence via Digilocker
+## Pull Driving Licence
 
 Use this flow to fetch a user's Driving Licence from Digilocker via Setu APIs. This involves two steps:
 
