prefix apis with /api/v2

--- a/content/payments/billpay/api-integration/upms.mdx
+++ b/content/payments/billpay/api-integration/upms.mdx
@@ -121,9 +121,9 @@ You must set up and provide us with a secure HTTPS webhook endpoint URL. This en
 
 ### 3.1 Creating a Registration (Combined with Bill Fetch)
 
-This process leverages the existing **Bill Fetch API** endpoint (`POST /bbps/bills/fetch/request`). To initiate a UPMS registration alongside fetching the current bill (if available), you simply include the `mandate` object in the standard Bill Fetch request.
+This process leverages the existing **Bill Fetch API** endpoint (`POST /api/v2/bbps/bills/fetch/request`). To initiate a UPMS registration alongside fetching the current bill (if available), you simply include the `mandate` object in the standard Bill Fetch request.
 
-**Endpoint:** `POST /bbps/bills/fetch/request`
+**Endpoint:** `POST /api/v2/bbps/bills/fetch/request`
 [See standard Bill Fetch API Reference](/content/payments/billpay/api-integration/apis.mdx#fetch-bill)
 
 **Type:** Asynchronous
@@ -329,7 +329,7 @@ Two independent callbacks can be triggered following this API call:
 
 This synchronous endpoint allows you to retrieve the current status and details of a specific, existing UPMS registration immediately.
 
-**Endpoint:** `GET /upms/registrations/{upmsRegistrationRefID}`
+**Endpoint:** `GET /api/v2/upms/registrations/{upmsRegistrationRefID}`
 
 **Purpose:** To check the details and current status of a UPMS registration.
 
@@ -433,7 +433,7 @@ This synchronous endpoint allows you to retrieve the current status and details 
 
 This asynchronous endpoint allows modification of certain fields of an active UPMS registration.
 
-**Endpoint:** `PATCH /upms/registrations/{upmsRegistrationRefID}`
+**Endpoint:** `PATCH /api/v2/upms/registrations/{upmsRegistrationRefID}`
 
 **Purpose:** To modify specific details of an existing, active UPMS registration.
 
@@ -606,7 +606,7 @@ You will receive an `UPDATE_UPMS_REGISTRATION` callback with the final outcome.
 
 This asynchronous endpoint permanently cancels an existing UPMS registration.
 
-**Endpoint:** `DELETE /upms/registrations/{upmsRegistrationRefID}`
+**Endpoint:** `DELETE /api/v2/upms/registrations/{upmsRegistrationRefID}`
 
 **Purpose:**
 
@@ -888,7 +888,7 @@ To facilitate this, we provide Simulation APIs that allow you to manually trigge
 
 This asynchronous API allows you to manually trigger a `BILL_FETCH` callback for a specific, active UPMS registration.
 
-**Endpoint:** `POST /upms/simulate/{upmsRegistrationRefID}/callbacks/bill`
+**Endpoint:** `POST /api/v2/upms/simulate/{upmsRegistrationRefID}/callbacks/bill`
 
 **Purpose:** To trigger the delivery of a simulated `BILL_FETCH` callback to your configured webhook endpoint for the specified `upmsRegistrationRefID`. This helps test how your system handles incoming bill presentments.
 
@@ -972,7 +972,7 @@ Shortly after receiving the 200 OK acknowledgment, your configured webhook liste
 
 This asynchronous API allows you to manually trigger a `SKIP_PAYMENT` callback for a specific bill reference ID.
 
-**Endpoint:** `POST /upms/simulate/{billRefId}/callbacks/skip-payment`
+**Endpoint:** `POST /api/v2/upms/simulate/{billRefId}/callbacks/skip-payment`
 
 **Purpose:** To trigger the delivery of a simulated `SKIP_PAYMENT` callback to your configured webhook endpoint for the specified `billRefId`. This helps test how your system handles notifications that a bill, previously presented, was paid via another channel.
 
@@ -1065,3 +1065,4 @@ Shortly after receiving the 200 OK acknowledgment, your configured webhook liste
 This concludes the guide on integrating with Setu's UPMS APIs.
 
 <WasPageHelpful />
+
