add optional line for creating registration

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -30,6 +30,9 @@ For e.g., if your customer wants to pay their phone bill for Vodafone Postpaid, 
     </li>
 </ul>
 
+Optionally, you can also registration the customer with this biller simultaneously to receive future bills as and when they are generated (See [UPMS Integration Guide](upms.mdx)).
+
+
 <Card padding="nano" shape="rounded">
     <details>
         <summary>
