minor tweak in upms.mdx

--- a/content/payments/billpay/api-integration/upms.mdx
+++ b/content/payments/billpay/api-integration/upms.mdx
@@ -75,7 +75,7 @@ A UPMS registration progresses through various states:
 - **SUCCESS**: Registration is active; bills will be presented via callbacks.
 - **FAILED**: Registration could not be completed (e.g., invalid details).
 - **CANCELLED**: Registration permanently cancelled by user or system.
-- **DEACTIVATED**: Registration is inactive (temporarily).
+- **DEACTIVATED**: Registration has been deactivated.
 
 ### 2.3 Registration Types
 
