add extra fields on create esign request integration doc

--- a/content/data/esign/quickstart.mdx
+++ b/content/data/esign/quickstart.mdx
@@ -163,6 +163,9 @@ Create signature request can also be created by using configId in case of flexib
                       "identifier": "9876543210", 
                       "displayName": "John Doe", 
                       "birthYear": "1988",
+                      "geoCoordinate": "123.45, 56.7",
+                      "location": "patiala punjab",
+                      "signerNo": 1,
                       "signature": { 
                           "onPages": [ 
                               "1" 
@@ -184,9 +187,12 @@ Create signature request can also be created by using configId in case of flexib
                     "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
                     "id": "cb80bfb4-d163-426e-ad57-1fd8889e62d4", 
                     "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
+                    "reason": "test",
                     "signers": [{ 
                             "displayName": "John Doe", 
                             "birthYear": "1988", //included if specified in Create signature request API
+                            "errCode": null,
+                            "location": "patiala punjab",
                             "id": "34f94af1-a8b9-4797-b287-c5ef7bff99a1", 
                             "identifier": "9876543210", 
                             "signatureDetails": null, 
@@ -251,9 +257,12 @@ Create signature request can also be created by using configId in case of flexib
 "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
 "id": "cb80bfb4-d163-426e-ad57-1fd8889e62d4", 
 "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
+"reason": "test",
 "signers": [{ 
         "displayName": "Rahul R", 
         "birthYear": "1988", //included if specified in Create signature request API
+        "errCode": null,
+        "location": "patiala punjab",
         "id": "34f94af1-a8b9-4797-b287-c5ef7bff99a1", 
         "identifier": "7002484002", 
         "signatureDetails": null, 
@@ -263,6 +272,8 @@ Create signature request can also be created by using configId in case of flexib
 { 
         "displayName": "chetri R", 
         "birthYear": "1988", //included if specified in Create signature request API
+        "errCode": null,
+        "location": "patiala punjab",
         "id": "34f94af1-a8b9-4797-b287-c5ef7bff99a1", 
         "identifier": "9811412438", 
         "signatureDetails": null, 
