fix staging errors

--- a/content/payments/billpay/api-integration/webhooks.mdx
+++ b/content/payments/billpay/api-integration/webhooks.mdx
@@ -21,7 +21,7 @@ Here is the general structure of any webhook—
 2. `timeStamp` denotes the time when the webhook was triggered
 3. `event` is a pre-defined list of event types used to define what the webhook was triggered for
 4. `data` contains the webhook payload data on successful completion of the event.
-5. `error` contains details about the failure if the event could not be completed successfully. It typically includes `code` (or `Code`) and `message` (or `Message`) fields. One of `data` or `error` will be present.
+5. `error` contains details about the failure if the event could not be completed successfully. It typically includes `code` and `message` fields. One of `data` or `error` will be present.
 
 <hr class="primary" />
 
@@ -471,8 +471,8 @@ URL    : To be provided by partner (Registration Callback URL)`}</CodeBlockWithC
     "timeStamp": "2025-03-11T10:20:00.000+05:30",
     "refId": "HENSVVR4QOS7X1UGPY7JGUV444P10102204", // Reference ID of the FAILED attempt from sync response
     "error": {
-        "Code": "biller-registration-failed", // Note: PascalCase field name
-        "Message": "Failed to register with Biller" // Note: PascalCase field name
+        "code": "biller-registration-failed",
+        "message": "Failed to register with Biller"
     },
     "traceId": "D07LJTJ71N0PUBJKS640" // Trace ID for this callback
 }`}
@@ -584,8 +584,8 @@ URL    : To be provided by partner (Registration Callback URL)`}</CodeBlockWithC
     "timeStamp": "2025-04-28T17:54:07.062+05:30",
     "refId": "D07N6M6AIQNN6974G9EGH18p7p051181753", // The refId of the attempted update
     "error": {
-        "Code": "biller-update-registration-failed", // Note: PascalCase field name
-        "Message": "Failed to update registration with Biller" // Note: PascalCase field name
+        "code": "biller-update-registration-failed",
+        "message": "Failed to update registration with Biller"
     }
 }`}
         </CodeBlockWithCopy>
@@ -644,8 +644,8 @@ URL    : To be provided by partner (Registration Callback URL)`}</CodeBlockWithC
     "timeStamp": "2025-04-28T17:54:07.062+05:30", // Example Timestamp
     "refId": "D07N6M6AIQNN6974G9EGH18p7p051181753", // The refId of the attempted cancellation
     "error": {
-        "Code": "registration-cancellation-failed", // Example Error Code; Note: PascalCase
-        "Message": "Failed to cancel registration with Biller" // Example Error Message; Note: PascalCase
+        "code": "registration-cancellation-failed",
+        "message": "Failed to cancel registration with Biller"
     }
 }`}
         </CodeBlockWithCopy>
