rename code blocks

--- a/content/payments/billpay/api-integration/upms.mdx
+++ b/content/payments/billpay/api-integration/upms.mdx
@@ -437,7 +437,7 @@ This synchronous endpoint allows you to retrieve the current status and details 
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 200 OK (Registration Found)
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -492,7 +492,7 @@ This synchronous endpoint allows you to retrieve the current status and details 
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 404 Not Found
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -514,7 +514,7 @@ This synchronous endpoint allows you to retrieve the current status and details 
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 400 Bad Request
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -536,7 +536,7 @@ This synchronous endpoint allows you to retrieve the current status and details 
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 500 Internal Server Error
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -615,7 +615,7 @@ Confirms receipt and basic validation of the update request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 200 OK (Accepted)
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -633,7 +633,7 @@ Confirms receipt and basic validation of the update request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 400 Bad Request
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -655,7 +655,7 @@ Confirms receipt and basic validation of the update request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 404 Not Found
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -677,7 +677,7 @@ Confirms receipt and basic validation of the update request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 500 Internal Server Error
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -714,7 +714,7 @@ You will receive an `UPDATE_UPMS_REGISTRATION` callback with the final outcome.
         <details>
             <summary>
                 <Text as="h6" marginBottom="none" marginTop="none">
-                    Sample UPDATE_UPMS_REGISTRATION SUCCESS Callback Payload
+                    Sample Callback Payload
                 </Text>
             </summary>
             <CodeBlockWithCopy language="json">{`
@@ -775,7 +775,7 @@ You will receive an `UPDATE_UPMS_REGISTRATION` callback with the final outcome.
         <details>
             <summary>
                 <Text as="h6" marginBottom="none" marginTop="none">
-                    Sample UPDATE_UPMS_REGISTRATION FAILED Callback Payload
+                    Sample Callback Payload
                 </Text>
             </summary>
             <CodeBlockWithCopy language="json">{`
@@ -829,7 +829,7 @@ Confirms receipt of the cancellation request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 200 OK (Accepted)
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -847,7 +847,7 @@ Confirms receipt of the cancellation request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 400 Bad Request
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -869,7 +869,7 @@ Confirms receipt of the cancellation request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 404 Not Found
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -891,7 +891,7 @@ Confirms receipt of the cancellation request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 409 Conflict
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -913,7 +913,7 @@ Confirms receipt of the cancellation request.
     <details>
         <summary>
             <Text as="h6" marginBottom="none" marginTop="none">
-                Sample Response: 500 Internal Server Error
+                Sample Response
             </Text>
         </summary>
         <CodeBlockWithCopy language="json">{`
@@ -950,7 +950,7 @@ You will receive a `CANCEL_UPMS_REGISTRATION` callback confirming the outcome.
         <details>
             <summary>
                 <Text as="h6" marginBottom="none" marginTop="none">
-                    Sample CANCEL_UPMS_REGISTRATION SUCCESS Callback Payload
+                    Sample Callback Payload
                 </Text>
             </summary>
             <CodeBlockWithCopy language="json">{`
@@ -984,7 +984,7 @@ You will receive a `CANCEL_UPMS_REGISTRATION` callback confirming the outcome.
         <details>
             <summary>
                 <Text as="h6" marginBottom="none" marginTop="none">
-                    Sample CANCEL_UPMS_REGISTRATION FAILED Callback Payload
+                    Sample Callback Payload
                 </Text>
             </summary>
             <CodeBlockWithCopy language="json">{`
