--- a/content/payments/billpay/api-integration/upms.mdx
+++ b/content/payments/billpay/api-integration/upms.mdx
@@ -1109,7 +1109,7 @@ If a bill is paid elsewhere after presentation, you'll receive a `SKIP_PAYMENT` 
 3. **Callback to You**: We send a `SKIP_PAYMENT` webhook to your configured endpoint.
 4. **Your Processing**:
    - Acknowledge with HTTP `200 OK`.
-   - Parse `data.billRefId` and `data.dateOfPayment`.
+   - Parse `data.billRefId` and `data.dateOfPayment`. (Note: `data.billRefId` of skip payment callback is the same as `data.refId` of the bill fetch callback, i.e. the reference id of the presented bill(s))
    - Locate and mark the bill as paid in your system.
 
 **Example `SKIP_PAYMENT` Callback:**
